# yaokongqi

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/yaokongqi/remote/: AppConfig.kt  MainActivity.kt
Android/app/src/main/java/com/yaokongqi/remote/connection/: ConnectionManager.kt  UdpGamepadSender.kt
Android/app/src/main/java/com/yaokongqi/remote/legal/: LegalTexts.kt
Android/app/src/main/java/com/yaokongqi/remote/model/: AppSettings.kt  ButtonAction.kt  FullKeyboardLayout.kt  GamepadButtons.kt  GamepadLayout.kt  GridLayoutHelper.kt  KeyPresets.kt  LayoutMode.kt  LayoutPreset.kt  RemoteButton.kt  SavedDevice.kt  ScenarioLayoutPresets.kt  (+1 more)
Android/app/src/main/res/drawable/: ic_notification.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/main/res/values-night/: colors.xml  themes.xml
docs/: COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DEVELOPMENT.md  DISCLAIMER.md  GAMEPAD-MODE.md  LICENSE-CN.md  TRADEMARK.md  USAGE-POLICY.md  protocol.md
pc/: Cargo.toml
pc/.cargo/: config.toml
pc/src/: auth.rs  autostart.rs  config.rs  icon.rs  legal.rs  main.rs  protocol.rs  tray.rs
pc/src/input/: gamepad.rs  inject.rs  mod.rs  worker.rs
pc/src/protocol/: binary.rs  mod.rs
pc/src/server/: mod.rs  session.rs  udp.rs  ws.rs
(+34 files in other folders)
