[package]
name = "yaokongqi"
version = "0.2.0"
edition = "2021"
description = "遥控器 (Yaokongqi) — Windows 端远程输入接收服务"
authors = ["GZH <2178568050@qq.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/2178568050/yaokongqi"
readme = "../README.md"
keywords = ["remote-control", "websocket", "android", "windows"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = { version = "0.19", features = ["serde"] }
winit = { version = "0.29", default-features = false, features = ["rwh_05"] }
once_cell = "1"
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Shutdown",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading",
] }
local-ip-address = "0.6"
rand = "0.8"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
vigem-client = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
